// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSP Policies Snapshot should match development environment snapshot 1`] = `
"default-src 'self'
media-src 'self' 'self' https://*.mux.com https://stream.mux.com blob:
script-src 'self' 'nonce-REPLACED_NONCE' 'strict-dynamic' https: http: 'unsafe-inline' 'unsafe-eval' https://cdn.mux.com https://mux.com https://*.mux.com https://stream.mux.com http://localhost:*
style-src 'self' 'unsafe-inline' https://*.mux.com
connect-src 'self' *.thenational.academy *.hubspot.com *.clerk.accounts.dev https://api.avo.app/ https://eu.i.posthog.com https://europe-west2-oak-ai-beta-staging.cloudfunctions.net https://mux.com https://*.mux.com https://stream.mux.com https://inferred.litix.io
worker-src 'self' blob:
img-src 'self' blob: data: https://img.clerk.com https://res.cloudinary.com https://oaknationalacademy-res.cloudinary.com https://*.hubspot.com https://*.hsforms.com https://*.mux.com https://stream.mux.com
font-src 'self' gstatic-fonts.thenational.academy fonts.gstatic.com
object-src 'none'
base-uri 'self'
frame-src 'self' *.thenational.academy https://challenges.cloudflare.com https://*.mux.com https://www.avo.app/ https://stream.mux.com
form-action 'self'
frame-ancestors 'none' http://localhost:*
report-uri https://sentry.io/report&sentry_environment=test&sentry_release=1.0.0"
`;

exports[`CSP Policies Snapshot should match preview environment snapshot 1`] = `
"default-src 'self'
media-src 'self' 'self' https://*.mux.com https://stream.mux.com blob:
script-src 'self' 'nonce-REPLACED_NONCE' 'strict-dynamic' https: http: 'unsafe-inline' 'unsafe-eval' https://vercel.live https://vercel.com https://cdn.mux.com https://mux.com https://*.mux.com https://stream.mux.com
style-src 'self' 'unsafe-inline' https://vercel.live/ https://*.mux.com
connect-src 'self' *.thenational.academy *.hubspot.com https://vercel.live/ https://vercel.com *.pusher.com *.pusherapp.com *.clerk.accounts.dev https://api.avo.app/ https://mux.com https://*.mux.com https://stream.mux.com https://inferred.litix.io
worker-src 'self' blob:
img-src 'self' blob: data: https://img.clerk.com https://res.cloudinary.com https://oaknationalacademy-res.cloudinary.com https://*.hubspot.com https://*.hsforms.com https://vercel.live/ https://vercel.com *.pusher.com/ data: blob: https://*.mux.com https://stream.mux.com
font-src 'self' gstatic-fonts.thenational.academy fonts.gstatic.com https://vercel.live/ https://assets.vercel.com
object-src 'none'
base-uri 'self'
frame-src 'self' *.thenational.academy https://challenges.cloudflare.com https://*.mux.com https://vercel.live/ https://vercel.com https://www.avo.app/ https://stream.mux.com
form-action 'self'
frame-ancestors 'none'
report-uri https://sentry.io/report&sentry_environment=test&sentry_release=1.0.0
upgrade-insecure-requests"
`;

exports[`CSP Policies Snapshot should match production environment snapshot 1`] = `
"default-src 'self'
media-src 'self' 'self' https://*.mux.com https://stream.mux.com blob:
script-src 'self' 'nonce-REPLACED_NONCE' 'strict-dynamic' https: http: 'unsafe-inline'  https://cdn.mux.com https://mux.com https://*.mux.com https://stream.mux.com
style-src 'self' 'unsafe-inline' https://*.mux.com
connect-src 'self' *.thenational.academy *.hubspot.com https://mux.com https://*.mux.com https://stream.mux.com https://inferred.litix.io
worker-src 'self' blob:
img-src 'self' blob: data: https://img.clerk.com https://res.cloudinary.com https://oaknationalacademy-res.cloudinary.com https://*.hubspot.com https://*.hsforms.com https://*.mux.com https://stream.mux.com
font-src 'self' gstatic-fonts.thenational.academy fonts.gstatic.com
object-src 'none'
base-uri 'self'
frame-src 'self' *.thenational.academy https://challenges.cloudflare.com https://*.mux.com https://stream.mux.com
form-action 'self'
frame-ancestors 'none'
report-uri https://sentry.io/report&sentry_environment=test&sentry_release=1.0.0
upgrade-insecure-requests"
`;

exports[`CSP Policies Snapshot should match test environment snapshot 1`] = `
"default-src 'self'
media-src 'self' 'self' https://*.mux.com https://stream.mux.com blob:
script-src 'self' 'nonce-REPLACED_NONCE'  https: http: 'unsafe-inline' 'unsafe-eval' https://cdn.mux.com https://mux.com https://*.mux.com https://stream.mux.com
style-src 'self' 'unsafe-inline' https://*.mux.com
connect-src 'self' *.thenational.academy *.hubspot.com *.clerk.accounts.dev https://api.avo.app/ https://mux.com https://*.mux.com https://stream.mux.com https://inferred.litix.io
worker-src 'self' blob:
img-src 'self' blob: data: https://img.clerk.com https://res.cloudinary.com https://oaknationalacademy-res.cloudinary.com https://*.hubspot.com https://*.hsforms.com https://*.mux.com https://stream.mux.com
font-src 'self' gstatic-fonts.thenational.academy fonts.gstatic.com
object-src 'none'
base-uri 'self'
frame-src 'self' *.thenational.academy https://challenges.cloudflare.com https://*.mux.com https://www.avo.app/ https://stream.mux.com
form-action 'self'
frame-ancestors 'none'
report-uri https://sentry.io/report&sentry_environment=test&sentry_release=1.0.0
upgrade-insecure-requests"
`;
